log
Wed 15 May 2024 12:24:23 AM UTC: 
 tests:  0|5
total_score: 0/70
6ab6c0f
Wed 15 May 2024 12:40:49 AM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j < 10; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
0b80df6
Wed 15 May 2024 12:42:40 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j <= 9; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
18e7c94
Wed 15 May 2024 12:42:45 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3cefb8
Wed 15 May 2024 12:43:13 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a112bf6
Wed 15 May 2024 12:43:27 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j < 10; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
7233e6e
Wed 15 May 2024 12:43:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31d7a99
Wed 15 May 2024 12:43:45 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b6d658d
Wed 15 May 2024 12:43:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8809a38
Wed 15 May 2024 12:44:44 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d745204
Thu 16 May 2024 02:48:16 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
9ce2fb2
Thu 16 May 2024 05:15:34 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
e382ea2
Thu 16 May 2024 05:16:28 PM UTC: 
 sudoku.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
9135484
Thu 16 May 2024 05:32:00 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
7389181
Thu 16 May 2024 05:35:51 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
08995c9
Thu 16 May 2024 07:43:42 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
08995c9
Thu 16 May 2024 07:45:30 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
c2a1036
Thu 16 May 2024 07:45:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
29edf7a
Thu 16 May 2024 07:49:14 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:83: error: statement with no effect [-Werror=unused-value]
   71 |             if((i != auxi || j != auxj) && n->sudo[i][j] == n->sudo[auxi][auxj]) {j);
      |                                                                                   ^
sudoku.c:71:84: error: expected ‘;’ before ‘)’ token
   71 |             if((i != auxi || j != auxj) && n->sudo[i][j] == n->sudo[auxi][auxj]) {j);
      |                                                                                    ^
      |                                                                                    ;
sudoku.c:71:84: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
ccbc923
Thu 16 May 2024 07:49:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0fdf0d2
Thu 16 May 2024 07:50:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
69a3a1b
Thu 16 May 2024 07:50:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5b98e7b
Thu 16 May 2024 07:56:39 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
46a023b
Thu 16 May 2024 07:56:58 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
e90f3a6
Thu 16 May 2024 07:57:49 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
1a4d705
Thu 16 May 2024 10:38:39 PM UTC: 
 sudoku.c | 20 --------------------
 1 file changed, 20 deletions(-)
 tests:  6|2
total_score: 45/70
80f6d16
Thu 16 May 2024 10:41:08 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
5b91613
Thu 16 May 2024 10:41:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
6b770bf
Thu 16 May 2024 10:42:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
247c03a
Thu 16 May 2024 10:44:17 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
bcad922
Thu 16 May 2024 10:44:44 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
001340a
Thu 16 May 2024 10:44:54 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
232cfc9
Thu 16 May 2024 10:45:05 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
250fb4c
Thu 16 May 2024 10:56:06 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
0eba328
Thu 16 May 2024 11:00:42 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:15: error: invalid use of void expression
  129 |          push(popFront(adjNodes));
      |               ^~~~~~~~~~~~~~~~~~
sudoku.c:129:10: error: too few arguments to function ‘push’
  129 |          push(popFront(adjNodes));
      |          ^~~~
In file included from test.c:4:
list.h:33:6: note: declared here
   33 | void push(Stack* s, void* data);
      |      ^~~~
Compilation failed
e993ef3
